--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,9 @@
 ---
 
 consul:
-  version: ~
+  data_dir: "/var/lib/consul"
+  enable_debug: "true"
+  log_level: "info"
+  server: "true"
+  startopts: ""
+  version: "0.6.3"
