--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,1 +1,20 @@
 ---
+
+- name: Configure Consul service defaults
+  become: yes
+  template:
+    dest: /etc/defaults
+    src: defaults.j2
+
+- name: Create Consul config
+  become: yes
+  template:
+    dest: /etc/consul.d/config.json
+    src: config.json.j2
+  notify:
+    - restart consul
+
+- name: Start Consul service
+  service:
+    state: started
+    name: consul
