--- a/files/consul.conf
+++ b/files/consul.conf
@@ -20,5 +20,5 @@ script
     -config-dir="/etc/consul.d" \
     -bind=$BIND \
     ${CONSUL_FLAGS} \
-    >>/var/log/consul.log 2>&1
+    >>/var/log/consul/consul.log 2>&1
 end script
