--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,5 +16,6 @@ consul:
     enable_debug: "false"
     leave_on_terminate: "false"
     log_level: "warn"
+    node_name: "{{ ansible_fqdn }}"
     server: "false"
     start_join: []
