--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,12 +7,17 @@ consul:
   startopts: ""
   version: "0.6.4"
 
+  directories:
+    config_dir: "/etc/consul.d"
+    data_dir: "/var/lib/consul"
+    install_dir: "/usr/share/consul"
+    log_dir: "/var/log/consul"
+
   # for consuls json settings file
   settings:
     bootstrap: "false"
     bootstrap_expect: "1"
     datacenter: "aws-eu-west-1"
-    data_dir: "/var/lib/consul"
     enable_debug: "false"
     leave_on_terminate: "false"
     log_level: "warn"
