Adds checksum to consul download

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -21,6 +21,7 @@
   get_url:
     url: "https://releases.hashicorp.com/consul/{{ consul.version }}/consul_{{ consul.version }}_linux_amd64.zip"
     dest: "/var/tmp/consul_{{ consul.version }}_linux_amd64.zip"
+    sha256sum: "{{ consul.checksum }}"
 
 - name: Extract Consul
   become: yes
