--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,9 +18,10 @@ consul:
     bootstrap_expect: "1"
     datacenter: "aws-eu-west-1"
     enable_debug: "false"
-    leave_on_terminate: "false"
+    leave_on_terminate: "true"
     log_level: "warn"
     node_name: "{{ ansible_fqdn }}"
+    rejoin_after_leave: "true"
     server: "false"
     start_join: []
   startopts: ""
