--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,7 +22,10 @@ consul:
     log_level: "warn"
     node_name: "{{ ansible_fqdn }}"
     rejoin_after_leave: "true"
+    ports: {}
     server: "false"
     start_join: []
   startopts: ""
+  # Install Dnsmasq and use Consul as nameserver
+  use_as_nameserver: no
   version: "0.6.4"
