--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -24,6 +24,15 @@
   notify:
     - restart consul
 
+- name: Configure Dnsmasq to use Consul as nameserver
+  become: yes
+  template:
+    dest: /etc/dnsmasq.d/10-consul
+    src: dnsmasq.d/10-consul.j2
+  when: consul.use_as_nameserver | bool
+  notify:
+    - restart dnsmasq
+
 - name: Start Consul service
   become: yes
   service:
