--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -10,6 +10,7 @@
         settings:
           bootstrap_expect: 1
           server: "true"
+        use_as_nameserver: yes
 
   post_tasks:
     - name: Make sure Consul is up to date
