Refactors config and updates default version

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,11 +2,11 @@
 
 - name: Copy AWS autodiscover script
   become: yes
-  copy:
-    src: aws_ips_autodiscover
+  template:
+    src: aws_ips_autodiscover.j2
     dest: "/usr/local/bin/aws_ips_autodiscover"
     mode: 0750
-  when: consul.aws_ips_autodiscover.enabled
+  when: consul_aws_ips_autodiscover_enabled
 
 - name: Configure Consul service defaults
   become: yes
@@ -19,7 +19,7 @@
 - name: Create Consul config
   become: yes
   template:
-    dest: "{{ consul.directories.config_dir }}/config.json"
+    dest: "{{ consul_directories_config_dir }}/config.json"
     src: config.json.j2
   notify:
     - restart consul
@@ -29,7 +29,7 @@
   template:
     dest: /etc/dnsmasq.d/10-consul
     src: dnsmasq.d/10-consul.j2
-  when: consul.use_as_nameserver | bool
+  when: consul_use_as_nameserver | bool
   notify:
     - restart dnsmasq
 
