--- a/.bundle/config
+++ b/.bundle/config
@@ -1,6 +1,5 @@
 ---
-BUNDLE_PATH: vendor/bundle
-BUNDLE_DISABLE_SHARED_GEMS: '1'
-BUNDLE_BIN: bin
-BUNDLE_RETRY: 3
-
+BUNDLE_PATH: "vendor/bundle"
+BUNDLE_DISABLE_SHARED_GEMS: "true"
+BUNDLE_BIN: "bin"
+BUNDLE_RETRY: "3"
