--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -13,23 +13,27 @@
   apt:
     name: dnsmasq
     state: present
-  when: consul.use_as_nameserver | bool
+  when: consul_use_as_nameserver | bool
 
 - name: Create Consul required directories
   become: yes
   file:
     mode: 0755
-    path: "{{ item.value }}"
+    path: "{{ item }}"
     state: directory
-  with_dict: "{{ consul.directories }}"
+  with_items:
+    - "{{ consul_directories_config_dir }}"
+    - "{{ consul_directories_data_dir }}"
+    - "{{ consul_directories_install_dir }}"
+    - "{{ consul_directories_log_dir }}"
 
 - name: Download Consul
   become: yes
   get_url:
-    url: "https://releases.hashicorp.com/consul/{{ consul.version }}/consul_{{ consul.version }}_linux_amd64.zip"
-    dest: "/var/tmp/consul_{{ consul.version }}_linux_amd64.zip"
-    sha256sum: "{{ consul.checksum }}"
-    validate_certs: "{{ consul.ansible.validate_certs }}"
+    url: "https://releases.hashicorp.com/consul/{{ consul_version }}/consul_{{ consul_version }}_linux_amd64.zip"
+    dest: "/var/tmp/consul_{{ consul_version }}_linux_amd64.zip"
+    sha256sum: "{{ consul_checksum }}"
+    validate_certs: "{{ consul_ansible_validate_certs }}"
   register: consul_download_data
   until: consul_download_data | success
   retries: 3
@@ -39,16 +43,16 @@
   become: yes
   unarchive:
     copy: no
-    creates: "{{ consul.directories.install_dir }}/consul"
-    dest: "{{ consul.directories.install_dir }}"
-    src: "/var/tmp/consul_{{ consul.version }}_linux_amd64.zip"
+    creates: "{{ consul_directories_install_dir }}/consul"
+    dest: "{{ consul_directories_install_dir }}"
+    src: "/var/tmp/consul_{{ consul_version }}_linux_amd64.zip"
 
 - name: Link to Consul binary
   become: yes
   file:
     dest: /usr/bin/consul
     mode: 731
-    src: "{{ consul.directories.install_dir }}/consul"
+    src: "{{ consul_directories_install_dir }}/consul"
     state: link
 
 - name: Install Consul service
