--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,11 +5,12 @@ galaxy_info:
   description: Installs and configures Consul
   company: Lobsterdore
   license: MIT
-  min_ansible_version: 1.9
+  min_ansible_version: 2.1
   platforms:
     - name: Ubuntu
       versions:
-        - all
+        - trusty
+        - xenial
   categories:
     - system
 dependencies: []
