[GITHUB-1] Remove default bootstrap expect value
Also removed left over become statements.

--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -5,6 +5,7 @@
 
   roles:
     - role: ansible-consul
+      become: yes
       consul_bind_interface: "lo"
       consul_settings:
         bootstrap_expect: 1
