--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -26,8 +26,13 @@
     dest: /etc/dnsmasq.d/10-consul
     src: dnsmasq.d/10-consul.j2
   when: consul_use_as_nameserver | bool
-  notify:
-    - restart dnsmasq
+  register: consul_nameserver_config
+
+- name: Restart Dnsmasq service
+  service:
+    state: restarted
+    name: dnsmasq
+  when: consul_nameserver_config.changed
 
 - name: Start Consul service
   service:
