--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -56,14 +56,25 @@
     src: consul.service.upstart.j2
   when: ansible_service_mgr == "upstart"
 
+- name: Enable Consul service for upstart
+  service:
+    enabled: yes
+    name: consul
+  when: ansible_service_mgr == "upstart"
+
 - name: Install Consul service for systemd
   template:
     dest: /etc/systemd/system/consul.service
     mode: 0755
     src: consul.service.systemd.j2
-  when: ansible_service_mgr == "systemd"
+  when:
+    - ansible_service_mgr == "systemd"
 
-- name: Enable Consul service
-  service:
+- name: Enable Consul service for SystemD
+  become: yes
+  systemd:
+    daemon_reload: yes
     enabled: yes
     name: consul
+  when:
+    - ansible_service_mgr == "systemd"
