Ensures that resolveconf is overwritten

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -55,6 +55,7 @@
   become: yes
   file:
     dest: /etc/resolv.conf
+    force: yes
     mode: 600
     src: /run/systemd/resolve/resolv.conf
     state: link
